--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<div class="footer-container">
+  <div>© 2020 Taylor McPherson. Made with
+    <span> <img src="../../assets/img/heart.png" alt="love"></span>.
+  </div>
+</div>
