--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,4 @@
-<p>about works!</p>
+<div class="about-container">
+  <app-about-intro></app-about-intro>
+  <app-about-blurbs></app-about-blurbs>
+</div>
