--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-nav-bar></app-nav-bar>
-<app-work-intro></app-work-intro>
-<app-work-cards></app-work-cards>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
 
