--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="footer-container">
-  <div>© 2020 Taylor McPherson. Made with
-    <span> <img src="../../assets/img/heart.png" alt="love"></span>.
+  <div>© 2020 Taylor McPherson. Made with &#10084;&#65039;.
+    <!--<span> <img src="../../assets/img/heart.png" alt="love"></span>.-->
   </div>
 </div>
