--- a/src/app/work/work-intro/work-intro.component.html
+++ b/src/app/work/work-intro/work-intro.component.html
@@ -1,6 +1,6 @@
 <div class="work-intro-container">
   <div class="intro-container">
-    <img src="/assets/img/hi.jpg" width="140vw">
+    <img src="./assets/img/hi.jpg" width="140vw">
     <h2><span class="myName highlight">Taylor McPherson</span> is a <span class="myTitle highlight">UI/UX Designer and Researcher</span>
       who creates joyful and intuitive digital experiences.
     </h2>
