--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -2,7 +2,7 @@
   <img src="/../../assets/img/resume.png" width="80%">
   <div class="download-container">
     <div class="download-box">
-      <a href="/../../assets/docs/resume.pdf" target="_blank" class="download-button">
+      <a href="./assets/docs/resume.pdf" target="_blank" class="download-button">
         download
       </a>
     </div>
