--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,5 +1,5 @@
 <div class="resume-container">
-  <img src="/../../assets/img/resume.png" width="80%">
+  <img src="./assets/img/resume.png" width="80%">
   <div class="download-container">
     <div class="download-box">
       <a href="./assets/docs/resume.pdf" target="_blank" class="download-button">
