--- a/src/app/about/about-blurbs/about-blurbs.component.css
+++ b/src/app/about/about-blurbs/about-blurbs.component.css
@@ -14,14 +14,15 @@
 }
 
 .chat-title {
-  font-size: 1vw;
+  font-size: .8em;
   display: flex;
   color: #929292;
   font-weight: 600;
+  margin-bottom: -1em;
 }
 
 .single-blurb {
-  margin-top: .4em;
+  margin-top: 2em;
 }
 
 img {
@@ -41,12 +42,12 @@ img {
 }
 
 .blurb-title {
-  font-size: 2vw;
+  font-size: 1.4em;
   font-width: 600;
 }
 
 .blurb-description {
-  font-size: 1.5vw;
+  font-size: 1.1em;
   font-weight: 300;
-  margin-top: .2em;
+  margin-top: .4em;
 }
