--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,9 @@
-<div class="about-container">
+<div class="about-container-mobile" *ngIf="isMobile">
+  <app-about-intro></app-about-intro>
+  <app-about-blurbs></app-about-blurbs>
+</div>
+
+<div class="about-container" *ngIf="!isMobile">
   <app-about-intro></app-about-intro>
   <app-about-blurbs></app-about-blurbs>
 </div>
