--- a/src/app/about/about-blurbs/about-blurbs.component.html
+++ b/src/app/about/about-blurbs/about-blurbs.component.html
@@ -1,4 +1,5 @@
-<div class="full-container">
+<!--web-->
+<div class="full-container" *ngIf="!isMobile">
   <div class="blurbs-container">
     <p class="chat-title">CHAT WITH ME ABOUT</p>
     <div *ngFor="let blurb of blurbs" class="single-blurb">
@@ -9,11 +10,22 @@
           <div class="blurb-description">{{blurb.description}}</div>
         </div>
       </div>
-
-
     </div>
+  </div>
+</div>
 
-
-
+<!--mobile-->
+<div class="full-container-mobile" *ngIf="isMobile">
+  <div class="blurbs-container">
+    <p class="chat-title">CHAT WITH ME ABOUT</p>
+    <div *ngFor="let blurb of blurbs" class="single-blurb">
+      <div class="title-container">
+        <img class="title-img" src="{{blurb.imgUrl}}" alt="{{blurb.imgAlt}}">
+        <div class="words-container">
+          <div class="blurb-title">{{blurb.title}}</div>
+          <div class="blurb-description">{{blurb.description}}</div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
