--- a/src/app/about/about-intro/about-intro.component.html
+++ b/src/app/about/about-intro/about-intro.component.html
@@ -1,4 +1,10 @@
-<div class="about-intro-container">
+<div class="about-intro-container" *ngIf="!isMobile">
+  <h2>I'm currently studying <span class="major highlight">Computer Science</span> at
+    <span class="school highlight">UC Santa Cruz</span> and will be graduating in December, 2020.
+  </h2>
+</div>
+
+<div class="about-intro-container-mobile" *ngIf="isMobile">
   <h2>I'm currently studying <span class="major highlight">Computer Science</span> at
     <span class="school highlight">UC Santa Cruz</span> and will be graduating in December, 2020.
   </h2>
