--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
-<app-nav-bar></app-nav-bar>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="web-app-component" *ngIf="!isMobile">
+  <app-nav-bar></app-nav-bar>
+  <router-outlet></router-outlet>
+  <app-footer></app-footer>
+</div>
+
+<div class="mobile-app-component" *ngIf="isMobile">
+  <app-nav-bar></app-nav-bar>
+  <router-outlet></router-outlet>
+  <app-footer></app-footer>
+</div>
+
+,
 
