--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,9 @@
-<div class="footer-container">
-  <div>© 2020 Taylor McPherson. Made with &#10084;&#65039;.
-    <!--<span> <img src="../../assets/img/heart.png" alt="love"></span>.-->
-  </div>
+<!--web-->
+<div class="footer-container" *ngIf="!isMobile">
+  <div>© 2020 Taylor McPherson. Made with &#10084;&#65039;in Santa Cruz.</div>
+</div>
+
+<!--mobile-->
+<div class="footer-container-mobile" *ngIf="isMobile">
+  <div>© 2020 Taylor McPherson. Made with &#10084;&#65039; in Santa Cruz.</div>
 </div>
