--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -39,3 +39,21 @@ img {
   color: white;
   cursor: pointer;
 }
+
+/*----mobile--- */
+.resume-container-mobile .download-container {
+  width: 100%;
+  margin: .4em 0 0 1em;
+}
+
+.resume-container-mobile .download-box {
+  font-size: .7em;
+  height: 2em;
+  width: 6em;
+  border: 1px solid #7F93FF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  border-radius: 1em;
+}
