--- a/src/app/work/work-component.component.html
+++ b/src/app/work/work-component.component.html
@@ -1,4 +1,10 @@
-<div class="work-container">
+<!--web-->
+<div class="work-container" *ngIf="!isMobile">
+  <app-work-intro></app-work-intro>
+  <app-work-cards></app-work-cards>
+</div>
+<!--mobile-->
+<div class="work-container-mobile" *ngIf="isMobile">
   <app-work-intro></app-work-intro>
   <app-work-cards></app-work-cards>
 </div>
