--- a/src/app/work/work-intro/work-intro.component.html
+++ b/src/app/work/work-intro/work-intro.component.html
@@ -1,8 +1,21 @@
-<div class="work-intro-container">
+<!--web-->
+<div class="work-intro-container" *ngIf="!isMobile">
   <div class="intro-container">
     <img src="./assets/img/hi.jpg" width="140vw">
-    <h2><span class="myName highlight">Taylor McPherson</span> is a <span class="myTitle highlight">UI/UX Designer and Researcher</span>
+    <h2>
+      <span class="myName highlight">Taylor McPherson</span> is a
+      <span class="myTitle highlight">UI/UX Designer and Researcher</span>
+      who believes in leveraging technology to create a more just world.
+    </h2>
+  </div>
+</div>
+
+<!--mobile-->
+<div class="work-intro-container" *ngIf="isMobile">
+  <div class="intro-container">
+    <h2 class="mobile"><span class="myName highlight">Taylor McPherson</span> is a <span class="myTitle highlight">UI/UX Designer and Researcher</span>
       who creates joyful and intuitive digital experiences.
     </h2>
   </div>
 </div>
+
