--- a/src/app/about/about-intro/about-intro.component.css
+++ b/src/app/about/about-intro/about-intro.component.css
@@ -24,3 +24,10 @@ h2 {
   flex-wrap: wrap;
   margin-left: 1em;
 }
+
+/*----mobile----*/
+.about-intro-container-mobile h2 {
+  font-size: 1.3em;
+  width: 100%;
+  margin-left: 0;
+}
