--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -2,19 +2,22 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  margin: 4em;
+
 }
 
 * {
-  font-size: .9em;
+  font-size: .92em;
   font-weight: 600;
   margin-bottom: 1.4em;
   margin-top: -.4em;
 }
 
-a, .nav-item {
+.nav-item {
   text-decoration: none;
   color: #929292;
 }
+
 .nav-item {
   margin-right: 2.4em;
 }
@@ -29,3 +32,18 @@ a, .nav-item {
 }
 
 *:focus {outline:0 !important;}
+
+/*--mobile-- */
+
+.nav-bar-container-mobile {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 2em;
+
+}
+
+.nav-bar-container-mobile .nav-item {
+  font-size: .6em;
+  margin-bottom: 0;
+}
