--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,5 +1,18 @@
-<div class="resume-container">
+<!--web-->
+<div class="resume-container" *ngIf="!isMobile">
   <img src="./assets/img/resume.png" width="80%">
+  <div class="download-container">
+    <div class="download-box">
+      <a href="./assets/docs/resume.pdf" target="_blank" class="download-button">
+        download
+      </a>
+    </div>
+  </div>
+</div>
+
+<!--mobile-->
+<div class="resume-container-mobile" *ngIf="isMobile">
+  <img src="./assets/img/resume.png" width="100%">
   <div class="download-container">
     <div class="download-box">
       <a href="./assets/docs/resume.pdf" target="_blank" class="download-button">
