--- a/src/app/work/work-cards/work-cards.component.css
+++ b/src/app/work/work-cards/work-cards.component.css
@@ -9,6 +9,7 @@
   color: #929292;
   margin-top: 6em;
 }
+
 .cards-container {
   display: flex;
   flex-direction: row;
@@ -18,14 +19,14 @@
   margin-right: 0;
   margin-top: -2em;
 }
+
 .work-cards-container {
   width: 30vw;
   height: 20vw;
-  background-image: url("/src/assets/img/card-1.png");
   background-position: center;
   background-size: 30vw;
   opacity: .8;
-  box-shadow: 0 6px 48px #AEAEAE;
+  box-shadow: 0 6px 48px #CDCDCD;
   margin: 3em 0em 1em 0em;
   border-radius: 20px;
   display: flex;
@@ -58,8 +59,47 @@
   cursor: pointer;
 }
 
-
 .work-cards-container:hover .card{
   visibility: visible;
 }
 
+/*-----mobile-----*/
+
+.full-container-mobile {
+  display: flex;
+  flex-direction: column;
+}
+
+.full-container-mobile .selection-title {
+  font-size: .6em;
+  font-weight: 600;
+  color: #929292;
+  margin-top: 2em;
+}
+
+.full-container-mobile .cards-container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: -2em;
+}
+
+.full-container-mobile .work-cards-container {
+  width: 100%;
+  height: 10em;
+  background-position: center;
+  background-size: 100%;
+  opacity: .8;
+  box-shadow: 0 6px 48px #CDCDCD;
+  margin: 3.4em 0 0 0;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  color: #FFFFFF;
+}
