--- a/src/app/work/work-component.component.css
+++ b/src/app/work/work-component.component.css
@@ -1,4 +1,16 @@
 .work-container {
-  margin-left: 12vw;
-  margin-right: 8vw;
+  /*margin-left: 12vw;
+  margin-right: 8vw;*/
+  display: flex;
+  flex-direction: column;
+  margin-left: 13em;
+  margin-right: 13em;
+  justify-content: center;
+}
+
+.work-container-mobile {
+  margin: 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
