mobile version wooo

--- a/src/app/work/work-intro/work-intro.component.html
+++ b/src/app/work/work-intro/work-intro.component.html
@@ -13,8 +13,10 @@
 <!--mobile-->
 <div class="work-intro-container" *ngIf="isMobile">
   <div class="intro-container">
-    <h2 class="mobile"><span class="myName highlight">Taylor McPherson</span> is a <span class="myTitle highlight">UI/UX Designer and Researcher</span>
-      who creates joyful and intuitive digital experiences.
+    <h2 class="mobile">
+      <span class="myName highlight">Taylor McPherson</span> is a
+      <span class="myTitle highlight">UI/UX Designer and Researcher</span>
+      who believes in leveraging technology to create a more just world.
     </h2>
   </div>
 </div>
