--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -43,11 +43,13 @@ img {
 /*----mobile--- */
 .resume-container-mobile .download-container {
   width: 100%;
-  margin: .4em 0 0 1em;
+  margin: .4em 0 0 0;
+  display: flex;
+  justify-content: center;
 }
 
 .resume-container-mobile .download-box {
-  font-size: .7em;
+  font-size: .9em;
   height: 2em;
   width: 6em;
   border: 1px solid #7F93FF;
