--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -43,7 +43,7 @@ img {
 /*----mobile--- */
 .resume-container-mobile .download-container {
   width: 100%;
-  margin: .4em 0 0 0;
+  margin: 1em 0 0 0;
   display: flex;
   justify-content: center;
 }
