hyperlinks for tech4good

--- a/src/app/about/about-blurbs/about-blurbs.component.html
+++ b/src/app/about/about-blurbs/about-blurbs.component.html
@@ -8,7 +8,14 @@
         <!--<img class="title-img" src="{{blurb.imgUrl}}" alt="{{blurb.imgAlt}}">-->
         <div class="words-container">
           <div class="blurb-title">{{blurb.title}}</div>
-          <div class="blurb-description">{{blurb.description}}</div>
+          <div class="blurb-description" *ngIf="blurb.id == 1">
+            I get really excited thinking about radical ways technologies can transform our
+            world for the better. Nothing is too crazy. One of the most influential and inspiring forces
+            of socially-grounded tech in my life is the
+            <span><a href="https://tech4good.soe.ucsc.edu/" target="_blank"> Tech4Good Lab</a></span>,
+            where I’m a Fellow and work as a UX Researcher and Designer
+          </div>
+          <div *ngIf="blurb.id != 1" class="blurb-description">{{blurb.description}}</div>
         </div>
       </div>
     </div>
@@ -25,7 +32,14 @@
         <!--<img class="title-img" src="{{blurb.imgUrl}}" alt="{{blurb.imgAlt}}">-->
         <div class="words-container">
           <div class="blurb-title">{{blurb.title}}</div>
-          <div class="blurb-description">{{blurb.description}}</div>
+          <div class="blurb-description" *ngIf="blurb.id == 1">
+            I get really excited thinking about radical ways technologies can transform our
+            world for the better. Nothing is too crazy. One of the most influential and inspiring forces
+            of socially-grounded tech in my life is the
+            <span><a href="https://tech4good.soe.ucsc.edu/" target="_blank"> Tech4Good Lab</a></span>,
+            where I’m a Fellow and work as a UX Researcher and Designer
+          </div>
+          <div *ngIf="blurb.id != 1" class="blurb-description">{{blurb.description}}</div>
         </div>
       </div>
     </div>
