--- a/src/app/about/about-blurbs/about-blurbs.component.css
+++ b/src/app/about/about-blurbs/about-blurbs.component.css
@@ -53,6 +53,17 @@
   margin-top: .4em;
 }
 
+.blurb-description a {
+  text-decoration: none;
+  font-weight: 500;
+  color: #5B7FFE;
+}
+
+.blurb-description a:hover {
+  opacity: .6;
+  cursor: pointer;
+}
+
 /*------mobile------*/
 .full-container-mobile {
   display: flex;
