--- a/src/app/work/work-cards/work-cards.component.css
+++ b/src/app/work/work-cards/work-cards.component.css
@@ -27,7 +27,7 @@
   background-size: 30vw;
   opacity: .8;
   box-shadow: 0 6px 48px #CDCDCD;
-  margin: 3em 0em 1em 0em;
+  margin: 3em 0 1em 0;
   border-radius: 20px;
   display: flex;
   flex-direction: column;
@@ -89,7 +89,7 @@
 
 .full-container-mobile .work-cards-container {
   width: 100%;
-  height: 10em;
+  height: 12em;
   background-position: center;
   background-size: 100%;
   opacity: .8;
