--- a/src/app/about/about-blurbs/about-blurbs.component.html
+++ b/src/app/about/about-blurbs/about-blurbs.component.html
@@ -13,7 +13,7 @@
             world for the better. Nothing is too crazy. One of the most influential and inspiring forces
             of socially-grounded tech in my life is the
             <span><a href="https://tech4good.soe.ucsc.edu/" target="_blank"> Tech4Good Lab</a></span>,
-            where I’m a Fellow and work as a UX Researcher and Designer
+            where I’m a Fellow and work as a UX Researcher and Designer.
           </div>
           <div *ngIf="blurb.id != 1" class="blurb-description">{{blurb.description}}</div>
         </div>
@@ -37,7 +37,7 @@
             world for the better. Nothing is too crazy. One of the most influential and inspiring forces
             of socially-grounded tech in my life is the
             <span><a href="https://tech4good.soe.ucsc.edu/" target="_blank"> Tech4Good Lab</a></span>,
-            where I’m a Fellow and work as a UX Researcher and Designer
+            where I’m a Fellow and work as a UX Researcher and Designer.
           </div>
           <div *ngIf="blurb.id != 1" class="blurb-description">{{blurb.description}}</div>
         </div>
