starter for critical design page

--- a/src/app/about/about-blurbs/about-blurbs.component.html
+++ b/src/app/about/about-blurbs/about-blurbs.component.html
@@ -15,6 +15,13 @@
             <span><a href="https://tech4good.soe.ucsc.edu/" target="_blank"> Tech4Good Lab</a></span>,
             where I’m a Fellow and work as a UX Researcher and Designer.
           </div>
+
+          <div class="blurb-description" *ngIf="blurb.id == 4">
+            I love to thinking about how images can allow us to exist in our bodies with joy, power, vulnerability, and love.
+            If you're curious, you can check out my photography portfolio
+            <span><a href="https://taylormcpherson.myportfolio.com/" target="_blank"> here</a></span>.
+          </div>
+
           <div *ngIf="blurb.id != 1" class="blurb-description">{{blurb.description}}</div>
         </div>
       </div>
@@ -39,6 +46,14 @@
             <span><a href="https://tech4good.soe.ucsc.edu/" target="_blank"> Tech4Good Lab</a></span>,
             where I’m a Fellow and work as a UX Researcher and Designer.
           </div>
+
+          <div class="blurb-description" *ngIf="blurb.id == 4">
+            I love to thinking about how images can allow us to exist in our bodies with joy, power, vulnerability, and love.
+            If you're curious, you can check out my photography portfolio
+            <span><a href="https://taylormcpherson.myportfolio.com/" target="_blank"> here</a></span>.
+          </div>
+
+
           <div *ngIf="blurb.id != 1" class="blurb-description">{{blurb.description}}</div>
         </div>
       </div>
