--- a/src/app/work/work-cards/work-cards.component.html
+++ b/src/app/work/work-cards/work-cards.component.html
@@ -3,7 +3,8 @@
   <div class="selection-title">SELECTED WORKS</div>
   <div class="cards-container">
     <div *ngFor="let card of cards">
-      <div class="work-cards-container" [ngStyle]="{backgroundImage: card.imgUrl}">
+      <div class="work-cards-container" [ngStyle]="{backgroundImage: card.imgUrl}"
+         routerLink="{{card.routerLink}}">
         <div class="card-title card">{{card.title}}</div>
         <div class="card-description card">{{card.description}}</div>
       </div>
@@ -16,10 +17,11 @@
   <div class="selection-title">SELECTED WORKS</div>
   <div class="cards-container">
     <div *ngFor="let card of cards">
-      <div class="work-cards-container" [ngStyle]="{backgroundImage: card.imgUrl}">
+      <a class="work-cards-container" [ngStyle]="{backgroundImage: card.imgUrl}"
+         routerLink="{{card.routerLink}}">
         <div class="card-title card">{{card.title}}</div>
         <div class="card-description card">{{card.description}}</div>
-      </div>
+      </a>
     </div>
   </div>
 </div>
