--- a/src/app/work/work-cards/work-cards.component.css
+++ b/src/app/work/work-cards/work-cards.component.css
@@ -1,3 +1,9 @@
+a {
+  text-decoration: none;
+}
+
+*:focus {outline:0 !important;}
+
 .full-container {
   display: flex;
   flex-direction: column;
