--- a/src/app/case-study/critical-design/critical-design.component.css
+++ b/src/app/case-study/critical-design/critical-design.component.css
@@ -1,32 +1,60 @@
-.main-container {
+.outer-container {
   margin: -2em 4em 4em 4em;
-  border-radius: 40px;
-  box-shadow: 0 8px 80px #E2E2E2;
+  /*border-radius: 40px;
+  box-shadow: 0 8px 80px #E2E2E2;*/
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+.main-container {
+  margin: 0 8em 4em 8em;
+  font-size: 1.1em;
+  color: #4f4f4f;
+  font-weight: 300;
+  line-height: 1.8em;
 
+}
+/*------intro--------*/
 h2 {
   font-size: 1.6em;
+  line-height: 2em;
   font-weight: 600;
   text-align: center;
-  margin-top: 2em;
-
+  color: #5B7FFE;
 }
-
 .description {
   text-align: left;
-  margin: 0 12em 2em 12em;
+  font-style: italic;
   font-size: 1.2em;
-  font-weight: 300;
+  margin: 0 3em 2em 3em;
+
+}
+.intro-img {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  /*margin:0 -8em 4em -8em;*/
+  margin-bottom: 4em;
+}
+img.intro {
+  width: 100%;
+}
+.word-section {
+  display: flex;
+  flex-direction: column;
+  margin: 1em 0 6em 0;
+}
+.title {
+  font-size: 1.05em;
+  font-weight: 600;
+  margin-bottom: 1.2em;
+  color: #828282;
 }
 
-.intro-img {
-  width: 100%;
-  height: 400px;
-}
+/*-----problem space----*/
+
+
 .video {
   border: none;
   display: flex;
