--- a/src/app/case-study/critical-design/critical-design.component.html
+++ b/src/app/case-study/critical-design/critical-design.component.html
@@ -1,10 +1,36 @@
-<div class="main-container" *ngFor="let c of cases">
-  <div *ngIf="c.id==1">
-    <h2 class="title">{{c.title}}</h2>
-    <div class="description">{{c.description}}</div>
-    <img class="intro-img" src="{{c.imgUrl}}"/>
-    <div class="video">
-      <iframe src="https://www.youtube.com/embed/ttNsRgl_ffA" width="550" height="400" allowfullscreen></iframe>
-    </div>
+<div class="outer-container">
+  <div class="main-container">
+    <!--intro section-->
+    <section class="intro" *ngFor="let c of intros">
+      <div *ngIf="c.id==1">
+        <h2 class="page-title">{{c.title}}</h2>
+        <div class="description">{{c.description}}</div>
+        <div class="intro-img">
+          <img class="intro" src="{{c.imgUrl}}"/>
+        </div>
+        <div class="word-section problem">
+          <div class="problem-title title">{{c.problemTitle}}</div>
+          <div class="problem-descrip">{{c.problemDescrip}}</div>
+        </div>
+      </div>
+    </section>
+    <!--end intro-->
+
+
+    <!--overview-->
+    <section class="overview">
+      <div class="word-section overview">
+        <div class="title">OVERVIEW</div>
+        <div class="overview-descrip"><img src="./assets/img/crit-overview"></div>
+
+      </div>
+
+    </section>
+
+
+      <!--<div class="video">
+        <iframe src="https://www.youtube.com/embed/ttNsRgl_ffA" width="550" height="400" allowfullscreen></iframe>
+      </div>-->
+
   </div>
 </div>
