--- a/src/app/case-study/critical-design/critical-design.component.html
+++ b/src/app/case-study/critical-design/critical-design.component.html
@@ -14,23 +14,55 @@
         </div>
       </div>
     </section>
-    <!--end intro-->
-
 
     <!--overview-->
     <section class="overview" *ngFor="let crit of crits">
-      <div class="word-section overview">
-        <div class="title">{{crit.overviewTitle}}</div>
-        <div class="overview-descrip"><img src="{{crit.overviewImg}}"></div>
+      <div class="word-section">
+        <div class="title">{{crit.sectionTitle}}</div>
+        <div class="section-img"><img src="{{crit.sectionImg}}" width="100%"></div>
+        <div class="section-descrip">{{crit.sectionDescrip}}</div>
+      </div>
+    </section>
 
+    <!--design process-->
+    <section class="process" *ngFor="let p of process">
+      <div class="process-title">
+        <div class="ptitle">{{p.title}}&nbsp;</div>
+        <div class="psubtitle">{{p.subtitle}}</div>
+      </div>
+      <div *ngIf="p.img!=''" class="pimg">
+        <img src="{{p.img}}" width="100%">
+      </div>
+      <div class="pdescrip">{{p.description}}</div>
+    </section>
+
+    <!--final design -->
+    <section class="final-design" *ngFor="let f of final">
+      <div class="word-section">
+        <div class="title">{{f.sectionTitle}}</div>
+        <div class="section-descrip">{{f.sectionDescrip}}</div>
+        <div class="section-img"><img src="{{f.sectionImg}}" width="100%"></div>
+      </div>
+      <div class="video">
+        <iframe src="https://www.youtube.com/embed/ttNsRgl_ffA" width="100%" height="400" allowfullscreen></iframe>
+      </div>
+    </section>
+
+    <!--reflections-->
+    <section class="reflections">
+      <div  *ngFor="let r of reflect">
+        <div class="word-section">
+          <div class="title">{{r.sectionTitle}}</div>
+          <div class="section-descrip">{{r.sectionDescrip}}</div>
+        </div>
+      </div>
+      <div *ngFor="let s of rSection" class="reflection-section">
+        <div class="r-title">{{s.sectionTitle}}</div>
+        <div class="r-descrip">{{s.sectionDescrip}}</div>
       </div>
 
     </section>
 
-
-      <!--<div class="video">
-        <iframe src="https://www.youtube.com/embed/ttNsRgl_ffA" width="550" height="400" allowfullscreen></iframe>
-      </div>-->
 
   </div>
 </div>
