--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -42,6 +42,9 @@ img {
 }
 
 /*----mobile--- */
+.resume-container-mobile img {
+  margin-top: 0;
+}
 .resume-container-mobile .download-container {
   width: 100%;
   margin: 1em 0 0 0;
