adding skeletons for all case study pages

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,7 @@ body, input[type="text"], button {
 * {
   /*font-family: Nunito, sans-serif;*/
   font-family: 'Nunito', sans-serif;
+  line-height: 1.6em;
 }/* You can add global styles to this file, and also import other style files */
 
 ::selection {
