--- a/src/app/about/about-blurbs/about-blurbs.component.css
+++ b/src/app/about/about-blurbs/about-blurbs.component.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  padding-left: 10%;
+  padding-left: 8%;
   padding-right: 10%;
 }
 
@@ -81,7 +81,7 @@
 }
 
 .full-container-mobile .chat-title {
-  font-size: .6em;
+  font-size: .7em;
   font-weight: 600;
   color: #929292;
   margin: 0 0 -2em 0;
@@ -105,7 +105,7 @@
 }
 
 .full-container-mobile .blurb-description {
-  font-size: .9em;
+  font-size: 1em;
   font-weight: 300;
   margin-top: .4em;
 }
