--- a/src/app/case-study/critical-design/critical-design.component.html
+++ b/src/app/case-study/critical-design/critical-design.component.html
@@ -8,10 +8,6 @@
         <div class="intro-img">
           <img class="intro" src="{{c.imgUrl}}"/>
         </div>
-        <div class="word-section problem">
-          <div class="problem-title title">{{c.problemTitle}}</div>
-          <div class="problem-descrip">{{c.problemDescrip}}</div>
-        </div>
       </div>
     </section>
 
@@ -19,7 +15,9 @@
     <section class="overview" *ngFor="let crit of crits">
       <div class="word-section">
         <div class="title">{{crit.sectionTitle}}</div>
-        <div class="section-img"><img src="{{crit.sectionImg}}" width="100%"></div>
+        <div *ngIf="crit.sectionImg!=''" class="section-img">
+          <img src="{{crit.sectionImg}}" width="100%">
+        </div>
         <div class="section-descrip">{{crit.sectionDescrip}}</div>
       </div>
     </section>
