scroll to top button added on all pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,18 @@
+<!---web---->
 <div class="web-app-component" *ngIf="!isMobile">
   <app-nav-bar></app-nav-bar>
+  <app-scroll-top></app-scroll-top>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
 </div>
 
+
+<!---mobile--->
 <div class="mobile-app-component" *ngIf="isMobile">
   <app-nav-bar></app-nav-bar>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
 </div>
 
-,
+
 
