--- a/src/app/case-study/group-scheduling/group-scheduling.component.html
+++ b/src/app/case-study/group-scheduling/group-scheduling.component.html
@@ -6,7 +6,9 @@
         <h2 class="page-title">{{c.title}}</h2>
         <div class="description">{{c.description}}</div>
         <div class="intro-img">
-          <img class="intro" src="{{c.imgUrl}}"/>
+          <video width="130%" controls autoplay>
+            <source src="{{c.imgUrl}}" type="video/mp4">
+          </video>
         </div>
       </div>
     </section>
