--- a/src/app/case-footer/case-footer.component.html
+++ b/src/app/case-footer/case-footer.component.html
@@ -1,1 +1,7 @@
-<p>case-footer works!</p>
+<div class="case-footer-container">
+  <div class="item" routerLink="/group-scheduling" routerLinkActive="activePage">GROUP SCHEDULING</div>
+  <div class="item" routerLink="/critical-design" routerLinkActive="activePage">ROBOT NANNYS</div>
+  <div class="item" routerLink="/apprenticeship-learning" routerLinkActive="activePage">APPRENTICESHIP LEARNING</div>
+  <div class="item" routerLink="/side-projects" routerLinkActive="activePage">PLAYGROUND</div>
+</div>
+
