--- a/src/app/case-study/critical-design/critical-design.component.html
+++ b/src/app/case-study/critical-design/critical-design.component.html
@@ -58,9 +58,7 @@
         <div class="r-title">{{s.sectionTitle}}</div>
         <div class="r-descrip">{{s.sectionDescrip}}</div>
       </div>
-
     </section>
-
-
   </div>
+  <app-case-footer></app-case-footer>
 </div>
