--- a/src/app/case-footer/case-footer.component.css
+++ b/src/app/case-footer/case-footer.component.css
@@ -2,14 +2,15 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
+  margin-bottom: -3em;
+  margin-top: 3em;
 
 }
 
 * {
   font-size: .92em;
   font-weight: 600;
-  margin-bottom: -2em;
-  margin-top: 2em;
 }
 
 .item {
