--- a/src/app/case-study/apprenticeship-learning/apprenticeship-learning.component.html
+++ b/src/app/case-study/apprenticeship-learning/apprenticeship-learning.component.html
@@ -1,5 +1,6 @@
 <div class="outer-container">
   <div class="main-container">
+    <!--intros-->
     <section class="intro" *ngFor="let c of intro">
       <div *ngIf="c.id==3">
         <h2 class="page-title">{{c.title}}</h2>
@@ -9,6 +10,18 @@
         </div>
       </div>
     </section>
+    <!--main sections-->
+    <section class="overview" *ngFor="let c of causeway">
+      <div class="word-section">
+        <div class="title">{{c.sectionTitle}}</div>
+        <div *ngIf="c.sectionImg!=''" class="section-img">
+          <img src="{{c.sectionImg}}" width="100%">
+        </div>
+        <div class="section-descrip">{{c.sectionDescrip}}</div>
+      </div>
+    </section>
+
+
   </div>
   <app-case-footer></app-case-footer>
 </div>
