--- a/src/app/case-footer/case-footer.component.css
+++ b/src/app/case-footer/case-footer.component.css
@@ -1,3 +1,4 @@
+/*-----WEB-----*/
 .case-footer-container {
   display: flex;
   flex-direction: row;
@@ -5,7 +6,6 @@
   align-items: center;
   margin-bottom: -3em;
   margin-top: 3em;
-
 }
 
 * {
@@ -27,4 +27,21 @@
 
 .activePage {
   color: #4f4f4f;
+}
+
+
+/*----MOBILE----*/
+.mobile * {
+  font-size: .8em;
+}
+
+.mobile .case-footer-container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.mobile .item {
+  margin-left: .5em;
+  margin-right: .5em;
 }
