--- a/src/app/case-footer/case-footer.component.html
+++ b/src/app/case-footer/case-footer.component.html
@@ -1,4 +1,14 @@
-<div class="case-footer-container">
+<!---WEB--->
+<div class="case-footer-container" *ngIf="!isMobile">
+  <div class="item" routerLink="/group-scheduling" routerLinkActive="activePage">GROUP SCHEDULING</div>
+  <div class="item" routerLink="/critical-design" routerLinkActive="activePage">ROBOT NANNYS</div>
+  <div class="item" routerLink="/apprenticeship-learning" routerLinkActive="activePage">APPRENTICESHIP LEARNING</div>
+  <div class="item" routerLink="/side-projects" routerLinkActive="activePage">PLAYGROUND</div>
+</div>
+
+
+<!---MOBILE--->
+<div class="mobile case-footer-container" *ngIf="isMobile">
   <div class="item" routerLink="/group-scheduling" routerLinkActive="activePage">GROUP SCHEDULING</div>
   <div class="item" routerLink="/critical-design" routerLinkActive="activePage">ROBOT NANNYS</div>
   <div class="item" routerLink="/apprenticeship-learning" routerLinkActive="activePage">APPRENTICESHIP LEARNING</div>
