--- a/src/app/case-study/apprenticeship-learning/apprenticeship-learning.component.html
+++ b/src/app/case-study/apprenticeship-learning/apprenticeship-learning.component.html
@@ -1,4 +1,5 @@
-<div class="outer-container">
+<!--WEB---->
+<div class="outer-container" *ngIf="!isMobile">
   <div class="main-container">
     <!--intros-->
     <section class="intro" *ngFor="let c of intro">
@@ -12,16 +13,62 @@
     </section>
     <!--main sections-->
     <section class="overview" *ngFor="let c of causeway">
-      <div class="word-section">
+      <div class="word-section" *ngIf="c.sectionTitle!='PROBLEM SPACE'">
         <div class="title">{{c.sectionTitle}}</div>
         <div *ngIf="c.sectionImg!=''" class="section-img">
           <img src="{{c.sectionImg}}" width="100%">
         </div>
         <div class="section-descrip">{{c.sectionDescrip}}</div>
       </div>
+      <div class="word-section problem" *ngIf="c.sectionTitle=='PROBLEM SPACE'">
+        <div class="title">{{c.sectionTitle}}</div>
+        <div class="section-descrip">{{c.sectionDescrip}}</div>
+        <div class="section-img">
+          <img src="{{c.sectionImg}}" width="50%">
+        </div>
+        <div class="section-descrip">
+          Our research is broadly an attempt to think about how we can break this cycle.
+        </div>
+      </div>
     </section>
+  </div>
+  <app-case-footer></app-case-footer>
+</div>
 
 
+<!---MOBILE---->
+<div class="mobile outer-container" *ngIf="isMobile">
+  <div class="main-container">
+    <!--intros-->
+    <section class="intro" *ngFor="let c of intro">
+      <div *ngIf="c.id==3">
+        <h2 class="page-title">{{c.title}}</h2>
+        <div class="description">{{c.description}}</div>
+        <div class="intro-img">
+          <img class="intro" src="{{c.imgUrl}}"/>
+        </div>
+      </div>
+    </section>
+    <!--main sections-->
+    <section class="overview" *ngFor="let c of causeway">
+      <div class="word-section" *ngIf="c.sectionTitle!='PROBLEM SPACE'">
+        <div class="title">{{c.sectionTitle}}</div>
+        <div *ngIf="c.sectionImg!=''" class="section-img">
+          <img src="{{c.sectionImg}}" width="100%">
+        </div>
+        <div class="section-descrip">{{c.sectionDescrip}}</div>
+      </div>
+      <div class="word-section problem" *ngIf="c.sectionTitle=='PROBLEM SPACE'">
+        <div class="title">{{c.sectionTitle}}</div>
+        <div class="section-descrip">{{c.sectionDescrip}}</div>
+        <div class="section-img">
+          <img src="{{c.sectionImg}}" width="50%">
+        </div>
+        <div class="section-descrip">
+          Our research is broadly an attempt to think about how we can break this cycle.
+        </div>
+      </div>
+    </section>
   </div>
   <app-case-footer></app-case-footer>
 </div>
