--- a/src/app/case-study/apprenticeship-learning/apprenticeship-learning.component.css
+++ b/src/app/case-study/apprenticeship-learning/apprenticeship-learning.component.css
@@ -1,7 +1,7 @@
+/*----web---------*/
+/*----page wide---*/
 .outer-container {
   margin: -2em 4em 4em 4em;
-  /*border-radius: 40px;
-  box-shadow: 0 8px 80px #E2E2E2;*/
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -53,7 +53,38 @@ img.intro {
   /*color: #828282;*/
 }
 
-
 .section-img {
   margin-bottom: 2em;
+}
+
+.problem .section-descrip {
+  margin-bottom: 1em;
+}
+
+.problem .section-img {
+  margin-bottom: 1em;
+}
+
+
+
+/*-----mobile-----*/
+.mobile .outer-container {
+  margin: 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.mobile h2 {
+  font-size: 1.3em;
+}
+
+.mobile .main-container {
+  font-size: 1em;
+  margin: 0;
+}
+
+.mobile .description {
+  margin: 0;
 }
