--- a/src/app/case-study/group-scheduling/group-scheduling.component.css
+++ b/src/app/case-study/group-scheduling/group-scheduling.component.css
@@ -1,7 +1,6 @@
+/*----web-----*/
 .outer-container {
   margin: -2em 4em 4em 4em;
-  /*border-radius: 40px;
-  box-shadow: 0 8px 80px #E2E2E2;*/
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -124,4 +123,35 @@ img.intro {
   font-weight: 600;
   margin-top: 2em;
   margin-bottom: .5em;
+}
+
+/*-----mobile-----*/
+.mobile .outer-container {
+  margin: 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.mobile h2 {
+  font-size: 1.3em;
+}
+
+.mobile .main-container {
+  font-size: 1em;
+  margin: 0;
+}
+
+.mobile .description {
+  margin: 0;
+}
+
+.mobile .process-title {
+  font-size: 1em;
+  flex-wrap: wrap;
+}
+
+.mobile img {
+  width: 100%;
 }
