--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -35,10 +35,14 @@
   flex-direction: row;
   justify-content: center;
   margin-top: 2em;
+  margin-bottom: 1.5em;
 
 }
 
 .nav-bar-container-mobile .nav-item {
   font-size: .8em;
   margin-bottom: 0;
+  margin-right: 1em;
+  margin-left: 1em;
 }
+
